# wwiv

./: .clang-format  .gitignore  .gitmodules  .svnignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  Doxyfile  Folder.DotSettings  LICENSE  MAINTAINERS  README  README.md  WWIV.sln  cc11.cmd  cconfig.cmd  clean.sh  cmake-config.sh  contributing.md  cpp.hint  debug.sh  mingw.cmd  msys.cmd  notice.txt  todo.md  vcpkg.json
bbs/: CMakeLists.txt  FindUser.cpp  Makefile  Makefile.linux  Runnable.h  SmallRecord.cpp  WComm.cpp  WComm.h  WConstants.h  WOutStream.cpp  WOutStreamBuffer.cpp  WOutStreamBuffer.h  WSession.cpp  WSession.h  WStatus.h  WStringUtils.cpp  WStringUtils.h  WTextFile.cpp  WTextFile.h  WUser.cpp  WUser.h  WWIV50.dsp  WWIV50.dsw  WWIV50.sln  WWIV50.vcproj  WWIV50b.mak  acs.cpp  acs.h  application.cpp  application.h  archivers.cpp  archivers.h  arword.cpp  arword.h  asv.cpp  asv.h  attach.cpp  attach.h  automsg.cpp  automsg.h  (+341 more)
bbs_test/: CMakeLists.txt  basic_test.cpp  bbs_helper.cpp  bbs_helper.h  bbs_macro_context_test.cpp  bbs_test.vcxproj  bbs_test.vcxproj.filters  bbs_test_main.cpp  bbslist_test.cpp  bputch_test.cpp  bputs_test.cpp  datetime_test.cpp  dsz_test.cpp  email_test.cpp  file_helper.cpp  input_test.cpp  make_abs_test.cpp  makeansi_test.cpp  msgbase1_test.cpp  new_bbslist_test.cpp  pause_test.cpp  printfile_test.cpp  quote_test.cpp  qwk_test.cpp  strings_test.cpp  stuffin_test.cpp  subxtr_test.cpp  trashcan_test.cpp  utility_test.cpp  wfile_test.cpp  wuser_test.cpp  wutil_test.cpp  xfer_test.cpp
binkp/: CMakeLists.txt  binkp.cpp  binkp.h  binkp_commands.cpp  binkp_commands.h  binkp_config.cpp  binkp_config.h  binkp_config_test.cpp  binkp_test.cpp  binkp_test_main.cpp  config_exceptions.h  cram.cpp  cram.h  cram_test.cpp  fake_connection.cpp  file_manager.cpp  file_manager.h  file_manager_test.cpp  net_log.cpp  net_log.h  net_log_test.cpp  ppp_config.cpp  ppp_config.h  ppp_config_test.cpp  receive_file.h  remote.cpp  remote.h  todo.txt  transfer_file.cpp  transfer_file.h  transfer_file_test.cpp  wfile_transfer_file.cpp  wfile_transfer_file.h
binkp_test/: CMakeLists.txt  binkp_config_test.cpp  binkp_test.cpp  binkp_test_main.cpp  cram_test.cpp  fake_connection.cpp  fake_connection.h  file_manager_test.cpp  net_log_test.cpp  ppp_config_test.cpp  transfer_file_test.cpp
common/: CMakeLists.txt  acs_test.cpp  bgetch.cpp  bgetch.h  bputch.cpp  checka.cpp  checka.h  com.cpp  com.h  common_events.h  common_helper.cpp  common_helper.h  common_test_main.cpp  context.cpp  context.h  datetime.cpp  datetime.h  exceptions.h  full_screen.cpp  full_screen.h  input.cpp  input.h  input_range.cpp  input_range.h  input_range_test.cpp  iobase.cpp  iobase.h  language.cpp  language.h  macro_context.cpp  macro_context.h  menu_data_util.cpp  menu_data_util.h  message_editor_data.cpp  message_editor_data.h  message_file.cpp  null_remote_io.cpp  null_remote_io.h  output.cpp  output.h  (+18 more)
common_test/: CMakeLists.txt  acs_test.cpp  common_helper.cpp  common_helper.h  common_test_main.cpp  input_range_test.cpp  menu_data_util_test.cpp  pipe_expr_test.cpp  remote_socket_io_test.cpp
core/: CMakeLists.txt  cereal_utils.h  clock.cpp  clock.h  command_line.cpp  command_line.h  command_line_test.cpp  connection.cpp  connection.h  core.vcxproj  core_test_main.cpp  cp437.cpp  cp437.h  crc32.cpp  crc32.h  crc32_test.cpp  datafile.h  datafile_test.cpp  datetime.cpp  datetime.h  eventbus.cpp  eventbus.h  eventbus_test.cpp  fake_clock.cpp  fake_clock.h  fake_clock_test.cpp  file.cpp  file.h  file_helper.cpp  file_helper.h  file_lock.cpp  file_lock.h  file_os2.cpp  file_test.cpp  file_unix.cpp  file_win32.cpp  filesystem.h  findfiles.cpp  findfiles.h  findfiles_test.cpp  (+80 more)
core_test/: CMakeLists.txt  clock_test.cpp  command_line_test.cpp  core_fixtures.vcxproj  core_fixtures.vcxproj.filters  core_test.vcxproj  core_test.vcxproj.filters  core_test_main.cpp  cp437_test.cpp  crc32_test.cpp  datafile_test.cpp  datetime_test.cpp  eventbus_test.cpp  fake_clock_test.cpp  file_helper.cpp  file_helper.h  file_test.cpp  findfiles_test.cpp  inifile_test.cpp  ip_address_test.cpp  log_test.cpp  md5_test.cpp  os_test.cpp  pipe_test.cpp  scope_exit_test.cpp  semaphore_file_test.cpp  stl_test.cpp  strings_test.cpp  textfile_test.cpp  transaction_test.cpp  uuid_test.cpp  wfile_test.cpp  wtextfile_test.cpp
fix/: CMakeLists.txt  dirs.cpp  dirs.h  fix.cpp  fix.h  fix.vcxproj  fix.vcxproj.filters  fix_config.cpp  fix_config.h  log.cpp  log.h  users.cpp  users.h
fsed/: CMakeLists.txt  commands.cpp  commands.h  common.cpp  common.h  fsed.cpp  fsed.h  fsed_model_test.cpp  fsed_test_main.cpp  line.cpp  line.h  model.cpp  model.h  model_test.cpp  view.cpp  view.h
init/: CMakeLists.txt  InitSession.h  archivers.cpp  archivers.h  autosel.cpp  autoval.cpp  autoval.h  changelog  compile.cpp  convert.cpp  convert.h  editors.cpp  editors.h  ifcns.h  init.cpp  init.h  init.vcxproj  init.vcxproj.filters  init1.cpp  init2.cpp  init3.cpp  input.cpp  input.h  instance_settings.cpp  instance_settings.h  ivardec.h  languages.cpp  languages.h  levels.cpp  levels.h  menus.cpp  menus.h  networks.cpp  networks.h  newinit.cpp  newinit.h  paths.cpp  paths.h  protocols.cpp  protocols.h  (+23 more)
initlib/: CMakeLists.txt  colors.cpp  colors.h  curses_io.cpp  curses_io.h  curses_win.cpp  curses_win.h  initlib.vcxproj  initlib.vcxproj.filters  input.cpp  input.h  listbox.cpp  listbox.h  w5assert.h
local_io/: CMakeLists.txt  curatr_provider.h  keycodes.h  local_io.cpp  local_io.h  local_io_curses.cpp  local_io_curses.h  local_io_unix_console.cpp  local_io_unix_console.h  local_io_win32.cpp  local_io_win32.h  null_local_io.cpp  null_local_io.h  stdio_local_io.cpp  stdio_local_io.h  wconstants.h
localui/: CMakeLists.txt  colors.cpp  colors.h  curses_io.cpp  curses_io.h  curses_win.cpp  curses_win.h  edit_items.cpp  edit_items.h  input.cpp  input.h  listbox.cpp  listbox.h  localui.vcxproj  localui.vcxproj.filters  stdio_win.cpp  stdio_win.h  ui_win.h  wwiv_curses.h
net_core/: CMakeLists.txt  net_cmdline.cpp  (+6 more)
(+2743 files in other folders)
